--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu:latest
+FROM openjdk:21
 LABEL authors="anoop"
-
-ENTRYPOINT ["top", "-b"]
+ARG JAR_FILE=./target/backend-0.0.1-SNAPSHOT.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
