--- a/execution/pom.xml
+++ b/execution/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>in.goducky</groupId>
-    <artifactId>backend</artifactId>
+    <artifactId>execution</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>backend</name>
     <description>backend</description>
