--- a/execution/Dockerfile
+++ b/execution/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21
 LABEL authors="anoop"
-ARG JAR_FILE=./target/backend-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE=./target/execution-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
