--- a/article/src/main/resources/application.properties
+++ b/article/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=article
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://192.168.31.250:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
