--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,15 @@
     "@lottiefiles/dotlottie-react": "^0.13.0",
     "@monaco-editor/react": "^4.6.0",
     "@react-icons/all-files": "^4.1.0",
+    "dompurify": "^3.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5"
+    "react-markdown": "^9.0.3",
+    "react-router-dom": "^7.1.5",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
